--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
         padding:20px; 
         color: white;
     }
+    
+    .button_3 {
+        background-color: #CBCACA ; 
+        padding:20px; 
+    }
+
 
     .center {
         margin: 0;
@@ -35,6 +41,7 @@
         <div class="center">
             <button class="button_1" onclick='makeOne()' width='200' height='30'>Add PacMan</button>
             <button class="button_2" onclick='update()' width='200' height='30'>Start Movement</button>
+            <button class="button_3" onclick='update()' width='200' height='30'>< a href="https://edmunddelrosario.github.io/portfolio/index.html">Back To Portfolio</a></button>
         </div>   
     </div>
     <script src="./pacmen.js"></script>
