--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="center">
             <button class="button_1" onclick='makeOne()' width='200' height='30'>Add PacMan</button>
             <button class="button_2" onclick='update()' width='200' height='30'>Start Movement</button>
-            <button class="button_3" onclick='update()' width='200' height='30'>< a href="https://edmunddelrosario.github.io/portfolio/index.html">Back To Portfolio</a></button>
+            <button class="button_3" onclick='update()' width='200' height='30'>Back To Portfolio</button>
         </div>   
     </div>
     <script src="./pacmen.js"></script>
