--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <style>
     .container {
-        padding:55px;
+        padding:255px;
     }
 
     .button_1 {
@@ -41,7 +41,9 @@
         <div class="center">
             <button class="button_1" onclick='makeOne()' width='200' height='30'>Add PacMan</button>
             <button class="button_2" onclick='update()' width='200' height='30'>Start Movement</button>
-            <button class="button_3" onclick='update()' width='200' height='30'>Back To Portfolio</button>
+            <a href="https://edmunddelrosario.github.io/portfolio/index.html">
+                <button class="button_3" onclick='update()' width='200' height='30'>Back To Portfolio</button>
+            </a>
         </div>   
     </div>
     <script src="./pacmen.js"></script>
